--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-media": "^1.10.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "strong-password-check": "^1.0.2",
