--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "mongoose": "^7.3.4",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
