--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "bugs": {
     "url": "https://github.com/KrzysztofOlejniczak/WalletApp/issues"
   },
-  "homepage": "https://github.com/KrzysztofOlejniczak/WalletApp#readme"
- 
+  "homepage": "https://github.com/KrzysztofOlejniczak/WalletApp#readme",
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  }
 }
