--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,11 +14,13 @@
     "formik": "^2.4.2",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "strong-password-check": "^1.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
