--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "morgan": "1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
