--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "dependencies": {
+    "sass": "^1.64.1",
+    "start": "^5.1.0"
   }
 }
