--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,11 +20,17 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
+    "react-media": "^1.10.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
+    "react-svg": "^16.1.19",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
     "redux-persist": "^6.0.0",
+    "sass": "^1.64.1",
+    "start": "^5.1.0",
     "strong-password-check": "^1.0.2",
     "victory": "^36.6.11",
     "web-vitals": "^2.1.4",
